--- a/rapport bio info/Limitationsandperspectives.tex
+++ b/rapport bio info/Limitationsandperspectives.tex
@@ -1,1 +1,9 @@
-\section{Limitations and perspectives}
+\section{Limitations et perspectives}
+\subsection{Limitation}
+La première limitation est la dépendance au modèle 3D. Sans la modélisation de la protéïne il est impossible d'avancer. Cette dépendance est lié à la base de données utilisée, si la requête à la base de données est nulle, aucune prédiction sera faite.
+\newline
+Chaque séquence ne peut avoir qu'une seule prédiction, dans le cas d'une séquence avec plusieurs expressions nous serons vite limités.
+\subsection{Perspectives}
+La première amélioration importante serait l'augmentation de la précision pour la détection des résidus. Cette amélioration permettra directement d'augementer la précision dans la prédiction des protéines. Indirectement cette augmentation de précision passe par des contraintes logiciel tel que la modélisation 3D de la protéine. Pouvoir atténuer les distances entre les modèles  3D modèles et les protéines ciblées.
+\newline
+Ceci implique également une base de données consequente. En effet cet augmentation de précision va de pair avec volumes de données, plus la précision augmente plus les données pour les representer augmentent.
