--- a/rapport bio info/rapport main.tex
+++ b/rapport bio info/rapport main.tex
@@ -31,7 +31,7 @@
 
 
 
-\usepackage[english]{babel}															% English language/hyphenation
+\usepackage[english]{babel}														% English language/hyphenation
 \usepackage[protrusion=true,expansion=true]{microtype}				% Better typography
 \usepackage{amsmath,amsfonts,amsthm}										% Math packages
 \usepackage[pdftex]{graphicx}														% Enable pdflatex
@@ -45,6 +45,7 @@
 %%% Advanced verbatim environment
 \usepackage{verbatim}
 \usepackage{fancyvrb}
+\usepackage[utf8]{inputenc}
 \DefineShortVerb{\|}								% delimiter to display inline verbatim text
 
 
@@ -96,6 +97,7 @@
 %%% Begin document
 \begin{document}
 \maketitle
+
 
 \input{tertiaryProtein}
 \input{CriticalAssessmentsofTechniquesforProteinesStructuralPrediction}
