--- a/rapport bio info/CriticalAssessmentsofTechniquesforProteinesStructuralPrediction.tex
+++ b/rapport bio info/CriticalAssessmentsofTechniquesforProteinesStructuralPrediction.tex
@@ -1,6 +1,26 @@
 \section{Critical Assessments  of Techniques  for Proteines Structural Prediction}
-\subsection{What is it?}
+\subsection{What and Why?}
 
-It stands for a world championship of predictive structure. This "competition" has started in 1994, and it is define, by themselves their objective to be to help advance the methods of identifying protein structure sequence. They provide the architecture to make these research such as servers, samples and consulting.
-\newline
-With time the CASP became bigger and bigger. It can provides very advanced proteins modelisation tehcnics. A very big consortium has been created since then, with american research group such as Structural Genomics Consortium (SGC), New York Structural Genomics Research Center (NYSGRC).
+The aim is to improve the advance on the protein structure identification. 
+The CASP (Critical Assessment of protein Structure Prediction) aim to etablish the actual state of the protein structure prediction methods, to identify progress which were made, and highlight the best directions to take.
+
+it's therefore an official and international competition, which test proteins structure prediction methods. The latter is divided on any categories
+
+\subsection{CASP Categories}
+\begin{enumerate}
+   \item Tertiary structure prediction
+   \item Template-based modelling
+   \item Template-free modelling
+   \item Oligomer prediction
+   \item Disorder prediction
+   \item Contact prediction
+   \item Model quality assessment
+   \item Function prediction
+\end{enumerate}
+
+\subsection{CASP's History}
+   The championship was created in 1994, and it occurs all 2 years.\\
+   Also, in 2014, we assisted to the eleventh edition.\\
+
+   This permit, now, to automate the models creation, and keep the same quality than the models of humans expert modellers.\\
+   Morever, it given the community a benchmark to test the usefulness of their algorithm.\\
