--- a/rapport bio info/rapport main.tex
+++ b/rapport bio info/rapport main.tex
@@ -40,7 +40,7 @@
 \usepackage{epstopdf}																	% Converts .eps to .pdf
 \usepackage{subfig}																		% Subfigures
 \usepackage{booktabs}																	% Nicer tables
-
+\usepackage[utf8]{inputenc}
 
 %%% Advanced verbatim environment
 \usepackage{verbatim}
@@ -85,10 +85,10 @@
 		\Large \bfseries \strut Daniel Barry Roche \strut
 }
 \author{ 									\usefont{OT1}{bch}{m}{n}
-        David Aubert\\		\usefont{OT1}{bch}{m}{n}
+        David Aubert \& Ahmed Rafik\\		\usefont{OT1}{bch}{m}{n}
         University of Montpellier\\	\usefont{OT1}{bch}{m}{n}
         Bio-informatics\\
-        \texttt{email@example.com}
+        %\texttt{email@example.com}
 }
 \date{}
 
@@ -100,6 +100,7 @@
 \input{tertiaryProtein}
 \input{CriticalAssessmentsofTechniquesforProteinesStructuralPrediction}
 \input{Modelqualityassessment}
+\input{Structurally_informed_function_prediction}
 \input{Proteinligandinteractionpredictionmethods}
 \input{Limitationsandperspectives}
 
