--- a/rapport bio info/CriticalAssessmentsofTechniquesforProteinesStructuralPrediction.tex
+++ b/rapport bio info/CriticalAssessmentsofTechniquesforProteinesStructuralPrediction.tex
@@ -7,6 +7,10 @@ The CASP (Critical Assessment of protein Structure Prediction) aim to etablish t
 it's therefore an official and international competition, which test proteins structure prediction methods. The latter is divided on any categories
 
 \subsection{CASP Categories}
+
+   The CASP rewards many type of methods, which are listing.
+   This represents the different fields concerned by the protein structure prediction. On all of this categories, there are many team of researchers who present them method to predict a protein structure.
+
 \begin{enumerate}
    \item Tertiary structure prediction
    \item Template-based modelling
