--- a/rapport bio info/tertiaryProtein.tex
+++ b/rapport bio info/tertiaryProtein.tex
@@ -6,16 +6,21 @@ The scientific vulgarization is that the tertiary structure is the spacial 3D st
 \newline
 Thus, we can easily conclude why it is a major importance to modelize such data.
 
-
 \subsection{Protein tertiary structure determination}
+   
+   Protein structure can be determinate experimentaly, using NMR or X-ray cristallography, and theoricaly, with template based method or template free method.\\
 
-A protein tertiary structure determination allows us to know more on the protein we are currently observing such as:
-\begin{itemize}
-	\item Connection between sequence and structures
-	\item  Easier than microscopic observation
-	\item Evolution of proteins
-\end{itemize}
+   \subsubsection{Why use this methods ?}
 
+   The experimental method are very exhautive and hard to devellop. So the structure model determination are very important to predict tertiary structure.
+
+   A protein tertiary structure determination allows us to know more on the protein we are currently observing such as:
+      \begin{itemize}
+	 \item Connection between sequence and structures
+	 \item  Easier than microscopic observation
+	 \item Evolution of proteins
+      \end{itemize}
+     
 \subsection{Different protein tertiary structure determination methods} 
 \subsubsection{Template-based modelling}
 \subsubsubsection{Template-based modelling fold recognition}
