--- a/rapport bio info/Modelqualityassessment.tex
+++ b/rapport bio info/Modelqualityassessment.tex
@@ -7,7 +7,7 @@
 
 \subsection{Evaluation Algorithm}
    \begin{enumerate}
-	\item ModFOLDclust2
+	\item ModFOLDclust2\\
           Create by Daniel Roche and Mc Muffin in 2010, this algorithm operate as follows :
 	  \begin{enumerate}
              \item Clustering-based method
@@ -15,7 +15,7 @@
              \item Producing global quality scores and per-residue errors
 	  \end{enumerate}
           So, this algorithm apply on a group of methods and compare their to know which is the best.
-	\item RFMQA 
+	\item RFMQA \\
           This algorithm is much more recent, it was created en 2014 by Manavalan and Al
 	  \begin{enumerate}
              \item It use a single model-based method
